tests/grammar/valid/core-match-01.vit
pick Resp { case Ok, case Err }

proc status_code(r: Resp) -> int {
  match r {
    case Ok { give 0 }
    else { give 1 }
  }
}
