tests/grammar/invalid/core-recovery-match-case-sync-01.vit
proc main() -> int {
  match value {
    case ) { give 1 }
    case B { give 2 }
    otherwise { give 3 }
  }
  give 0
}
